# flask-pass0

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
examples/: app.py  email_test.py  no_email_test.py  test_app.py
examples/templates/: 2fa_verify.html  auth.html  dashboard.html  index.html  login.html  tests.html
flask_pass0/: __init__.py  auth.py  device_binding.py  magic_link.py  pass0.py  passkey.py  storage.py  totp.py  two_factor.py  utils.py
tests/: conftest.py  pytest.ini  requirements.txt  test_2fa.py  test_auth.py  test_magic_link.py  test_passkey.py  test_security.py  test_storage_sqlalchemy.py
