[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-pass0"
version = "0.3.1"
description = "Passwordless authentication for Flask with magic links, passkeys, 2FA, and device binding."
readme = "README.md"
authors = [
    { name = "Jeremy Osborn", email = "jeremy@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
dependencies = [
    "Flask>=2.0.0",
]

[project.optional-dependencies]
sqlalchemy = ["Flask-SQLAlchemy>=2.5.0"]
email = ["Flask-Mail>=0.9.1"]
twofa = ["pyotp>=2.8.0", "qrcode[pil]>=7.0.0", "cryptography>=41.0.0"]
devices = ["user-agents>=2.2.0"]
passkey = ["webauthn>=2.0.0"]
all = [
    "Flask-SQLAlchemy>=2.5.0",
    "Flask-Mail>=0.9.1",
    "pyotp>=2.8.0",
    "qrcode[pil]>=7.0.0",
    "cryptography>=41.0.0",
    "user-agents>=2.2.0",
    "webauthn>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/jeremydosborn/flask-pass0"
"Bug Tracker" = "https://github.com/jeremydosborn/flask-pass0/issues"

[tool.setuptools]
include-package-data = true

# This ensures ALL modules under flask_pass0/ are included, not just the top folder
[tool.setuptools.packages.find]
where = ["."]
include = ["flask_pass0*"]